@@ -1,3 +1,5 @@
+########### 2015-8-15 #################
+ALTER TABLE flashsale_tongji_shopping ADD rebetamount INT(11) DEFAULT 0; 
 ########### 2015-8-13 #################
 alter table flashsale_shoppingcart add column remain_time datetime DEFAULT NULL;
 ########### 2015-8-6 #################
